[gd_scene load_steps=4 format=3 uid="uid://game_001"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="2"]
[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(540, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(900, 40)

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="Background" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="Container" type="StaticBody2D" parent="."]
position = Vector2(360, 1100)

[node name="Bottom" type="CollisionShape2D" parent="Container"]
position = Vector2(0, 0)
shape = SubResource("RectangleShape2D_1")

[node name="LeftWall" type="CollisionShape2D" parent="Container"]
position = Vector2(-270, -450)
rotation = 1.5708
shape = SubResource("RectangleShape2D_2")

[node name="RightWall" type="CollisionShape2D" parent="Container"]
position = Vector2(270, -450)
rotation = 1.5708
shape = SubResource("RectangleShape2D_2")

[node name="ContainerVisual" type="Line2D" parent="."]
points = PackedVector2Array(100, 200, 100, 1100, 620, 1100, 620, 200)
width = 3.0
default_color = Color(0, 1, 1, 0.5)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(360, 250)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="NextShapePreview" type="Control" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer/NextShapePreview"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "NEXT"
horizontal_alignment = 1

[node name="ShapeDisplay" type="Polygon2D" parent="CanvasLayer/NextShapePreview"]
position = Vector2(50, 65)

[node name="GravityIndicator" type="Label" parent="CanvasLayer"]
offset_left = 200.0
offset_top = 80.0
offset_right = 280.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 48
text = "â¬‡"
horizontal_alignment = 1

[node name="GravityButton" type="Button" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 80.0
offset_right = 180.0
offset_bottom = 130.0
text = "FLIP GRAVITY
(-50 pts)"

[node name="PauseButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 140.0
offset_right = -20.0
offset_bottom = 190.0
grow_horizontal = 0
text = "PAUSE"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Overlay" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer1" type="Control" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "RESUME"

[node name="RestartButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "RESTART"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "QUIT TO MENU"

[node name="GameOverScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="Overlay" type="ColorRect" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer1" type="Control" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Final Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RETRY"

[node name="MenuButton" type="Button" parent="CanvasLayer/GameOverScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"

[node name="DeathLine" type="Line2D" parent="."]
points = PackedVector2Array(100, 200, 620, 200)
width = 2.0
default_color = Color(1, 0, 0, 0.5)
